Correccion de id para css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     
-    <section id="mamiferos">
+    <section id="mamiferos01">
         <h2>Mamíferos</h2>
         <p>Vertebrados que se caracterizan por tener glándulas mamarias y cabello o pelo en su cuerpo.</p>
 
