Correcion critica de ID para csss

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     </section>
     
-    <section id="aves">
+    <section id="aves03">
         <h2>Aves</h2>
         <p>Vertebrados que se caracterizan por tener plumas y la capacidad de volar.</p>
 
     </section>
     
-    <section id="reptiles">
+    <section id="reptiles04">
         <h2>Reptiles</h2>
         <p>Vertebrados que se caracterizan por su piel escamosa y la mayoría de las veces, por su reproducción ovípara.</p>
 
