Correcion critica 2 de ID

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </section>
     
-    <section id="anfibios">
+    <section id="anfibios945">
         <h2>Anfibios</h2>
         <p>Son animales vertebrados que generalmente tienen una fase acuática en su ciclo de vida y una fase terrestre.</p>
     </section>
