Se agrego nuevos datos a pajaros

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <section id="aves03">
         <h2>Aves</h2>
-        <p>Vertebrados que se caracterizan por tener plumas y la capacidad de volar.</p>
+        <p>Vertebrados que se caracterizan por tener plumas y la capacidad de volar Suelen poner huevos, asi como migrar y recorrer grandes distancias</aside>.</p>
 
     </section>
     
