Se agrego informacion a mamiferos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <section id="mamiferos01">
         <h2>Mamíferos</h2>
-        <p>Vertebrados que se caracterizan por tener glándulas mamarias y cabello o pelo en su cuerpo.</p>
+        <p>Vertebrados que se caracterizan por tener glándulas mamarias y cabello o pelo en su cuerpo. Su reproducion suele ser lenta y por lo general, las crias son indefensas al nacer.</p>
 
     </section>
     
