Nueva seccion, animales exoticos

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <h2>Peces</h2>
         <p>Vertebrados acuáticos que tienen branquias para respirar bajo el agua.</p>
     </section>
+
+    <section id="exoticos">
+        <h2>Animales raros en el mundo</h2>
+        <p>Seccion en trabajo.</p>
+    </section>
     
     <footer>
         <p>Sunflower</p>
