Nueva seccion, curiosidades

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <h2>Animales raros en el mundo</h2>
         <p>Seccion en trabajo.</p>
     </section>
-    
+
+    <section id="curiosidades">
+        <h2>Animales raros en el mundo</h2>
+        <p>Seccion en trabajo.</p>
+    </section>
     <footer>
         <p>Sunflower</p>
     </footer>
