Lanzamiento de dos nuevas secciones

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
     <section id="exoticos">
         <h2>Animales raros en el mundo</h2>
-        <p>Seccion en trabajo.</p>
+        <p>El ornitorrinco es una animal....</p>
     </section>
 
     <section id="curiosidades">
         <h2>Animales raros en el mundo</h2>
-        <p>Seccion en trabajo.</p>
+        <p>Sabias que Australia es uno de los paises con mas animales mortiferos del planeta.</p>
     </section>
     <footer>
         <p>Sunflower</p>
